--- a/app/src/main/res/layout/dialog_open_switchgear_tr.xml
+++ b/app/src/main/res/layout/dialog_open_switchgear_tr.xml
@@ -34,8 +34,8 @@
                 style="@style/TextViewStyleContent"
                 android:layout_gravity="end"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="4dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="4dp"
                 android:background="@drawable/background_request_work_text_permission_c"
                 android:paddingHorizontal="4dp"
                 android:text="@string/spare"
@@ -52,45 +52,45 @@
 
                 <TextView
                     android:id="@+id/tv_type"
+                    style="@style/TextViewStyleContentHomePageSection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/ory_key_background"
-                    style="@style/TextViewStyleContentHomePageSection"
-                    android:text="ТДНГ"
-                    android:textSize="24sp"
+                    android:gravity="start"
                     android:paddingStart="16dp"
-                    android:paddingEnd="8dp"
                     android:paddingTop="8dp"
-                    android:gravity="start"/>
+                    android:paddingEnd="8dp"
+                    android:text="ТДНГ"
+                    android:textColor="@color/ory_key_background"
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/tv_type_parameter"
+                    style="@style/TextViewStyleContentHomePageSubsection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/text_content_rza"
-                    style="@style/TextViewStyleContentHomePageSubsection"
-                    android:text="3*40000/242/121/10,5"
+                    android:gravity="start"
                     android:paddingStart="16dp"
-                    android:textSize="20sp"
                     android:paddingEnd="8dp"
                     android:paddingBottom="16dp"
-                    android:gravity="start"/>
+                    android:text="3*40000/242/121/10,5"
+                    android:textColor="@color/text_content_rza"
+                    android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/tv_text_ory"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingEnd="12dp"
-                        android:paddingStart="22dp"
-                        android:paddingTop="6dp"
-                        android:layout_gravity="end"
-                        android:background="@drawable/background_item_open_switchgear_tr_parameter_right_d"
-                        style="@style/TextViewStyleContent"
-                        android:textColor="@color/text_content_rza"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:paddingBottom="2dp"
-                        android:text="  2СШ яч. 2 ОРУ - 220"/>
+                <TextView
+                    android:id="@+id/tv_text_ory"
+                    style="@style/TextViewStyleContent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@drawable/background_item_open_switchgear_tr_parameter_right_d"
+                    android:paddingStart="22dp"
+                    android:paddingTop="6dp"
+                    android:paddingEnd="12dp"
+                    android:paddingBottom="2dp"
+                    android:text="  2СШ яч. 2 ОРУ - 220"
+                    android:textColor="@color/text_content_rza"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -100,9 +100,9 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:background="@drawable/background_dialog_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_height="wrap_content">
+        android:background="@drawable/background_dialog_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -120,18 +120,18 @@
                 android:tint="@color/home_page_gradient" />
 
             <include
-                android:layout_marginTop="-12dp"
                 android:id="@+id/content_ory_vn_parameter"
                 layout="@layout/content_layout_ory_parameter_tr_dialog"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-12dp" />
 
             <include
-                android:layout_marginTop="16dp"
                 android:id="@+id/content_ory_sn_parameter"
                 layout="@layout/content_layout_ory_parameter_tr_dialog"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -144,8 +144,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:layout_marginEnd="16dp"
                     android:layout_marginTop="24dp"
+                    android:layout_marginEnd="16dp"
                     android:text="@string/panel"
                     android:textColor="#567993" />
 
@@ -157,8 +157,8 @@
                     android:layout_marginStart="40dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="16dp"
-                    android:text="34, 52, 53"
                     android:layout_marginBottom="16dp"
+                    android:text="34, 52, 53"
                     android:textColor="@color/home_page_gradient"
                     android:textStyle="normal" />
 
@@ -175,38 +175,55 @@
                 android:background="@drawable/background_dialog_tr_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_transcript_type"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_consumer"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginBottom="24dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:fontFamily="@font/actor"
-                    android:textColor="@color/text_color_dialog_equipment"
-                    style="@style/TextViewStyleContentHomePageSubsection"
-                    android:text="ajsdlfjalj\nalsdjfljasldj\nalsdjfljasldj\nalsdjfljasldj"
-                    android:textSize="20sp"
-                    android:gravity="start"/>
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+                    app:spanCount="3"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="vertical"
-
+                    android:layout_height="3dp"
                     android:background="@drawable/background_layout_line_gradient"
-                    android:layout_height="3dp"/>
+                    android:orientation="vertical" />
+
 
                 <TextView
-                    android:id="@+id/tv_additionally"
+                    android:id="@+id/tv_transcript_type"
+                    style="@style/TextViewStyleContentHomePageSubsection"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    android:paddingBottom="24dp"
                     android:fontFamily="@font/actor"
-                    android:textColor="@color/text_color_dialog_equipment"
-                    style="@style/TextViewStyleContentHomePageSubsection"
+                    android:gravity="start"
                     android:text="ajsdlfjalj\nalsdjfljasldj\nalsdjfljasldj\nalsdjfljasldj"
-                    android:textSize="20sp"
-                    android:gravity="start"/>
+                    android:textColor="@color/text_color_dialog_equipment"
+                    android:textSize="20sp" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="3dp"
+
+                    android:background="@drawable/background_layout_line_gradient"
+                    android:orientation="vertical" />
+
+                <TextView
+                    android:id="@+id/tv_additionally"
+                    style="@style/TextViewStyleContentHomePageSubsection"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:fontFamily="@font/actor"
+                    android:gravity="start"
+                    android:paddingBottom="24dp"
+                    android:text="ajsdlfjalj\nalsdjfljasldj\nalsdjfljasldj\nalsdjfljasldj"
+                    android:textColor="@color/text_color_dialog_equipment"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
