--- a/app/src/main/res/layout/item_equipment_tg.xml
+++ b/app/src/main/res/layout/item_equipment_tg.xml
@@ -43,8 +43,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
+            android:textColor="@color/floatingActionButton"
             android:paddingStart="16dp"
-            android:paddingTop="16dp"
+            android:paddingTop="8dp"
             android:paddingEnd="8dp"
             android:text="ТДНГ"
             android:textSize="24sp" />
@@ -55,8 +56,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="start"
+            android:textColor="@color/floatingActionButton"
             android:paddingStart="16dp"
-            android:paddingTop="4dp"
+            android:paddingTop="0dp"
             android:paddingEnd="8dp"
             android:text="ТДНГ"
             android:textSize="24sp" />
@@ -71,7 +73,7 @@
             android:paddingStart="16dp"
             android:background="@drawable/background_item_open_switchgear_tr_parameter_right"
             android:paddingEnd="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:paddingTop="4dp"
             android:text="3*40000/242/121/10,5"
             android:textSize="18sp" />
