--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -138,6 +138,18 @@
                         app:layout_constraintEnd_toStartOf="@+id/add_item_tsn" />
 
                     <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/download"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:background="@drawable/background_with_arc"
+                        android:src="@drawable/baseline_cloud_download_24"
+                        android:tint="@color/teal_700"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+
+                    <com.google.android.material.imageview.ShapeableImageView
                         android:id="@+id/add_item_tsn"
                         android:layout_width="32dp"
                         android:layout_height="32dp"
