--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -106,6 +106,7 @@
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_marginEnd="16dp"
+                        android:visibility="gone"
                         android:layout_marginBottom="16dp"
                         android:background="@drawable/background_with_arc"
                         android:src="@drawable/baseline_add_24"
@@ -118,6 +119,7 @@
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_marginEnd="16dp"
+                        android:visibility="gone"
                         android:layout_marginBottom="16dp"
                         android:background="@drawable/background_with_arc"
                         android:src="@drawable/baseline_add_24"
@@ -131,6 +133,7 @@
                         android:layout_height="32dp"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="16dp"
+                        android:visibility="gone"
                         android:background="@drawable/background_with_arc"
                         android:src="@drawable/baseline_add_24"
                         android:tint="@color/teal_700"
@@ -154,6 +157,7 @@
                         android:layout_width="32dp"
                         android:layout_height="32dp"
                         android:layout_marginEnd="16dp"
+                        android:visibility="gone"
                         android:layout_marginBottom="16dp"
                         android:background="@drawable/background_with_arc"
                         android:src="@drawable/baseline_add_24"
