--- a/app/src/main/res/layout/dialog_loader_locale_fb.xml
+++ b/app/src/main/res/layout/dialog_loader_locale_fb.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red_danger"
+    android:background="@drawable/shift_schedule_dialog_sorted_background"
     android:orientation="vertical">
 
     <com.google.android.material.button.MaterialButton
@@ -10,27 +10,102 @@
         style="@style/ButtonStyleRequestWorkEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="64dp"
-        android:text="Эл.двигатели" />
+        android:layout_gravity="start"
+
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
+        android:text="загрузка Эл.двигатели" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/b_switchgear"
         style="@style/ButtonStyleRequestWorkEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="Сборки" />
+        android:text="загрузка Сборки" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/b_lighting"
         style="@style/ButtonStyleRequestWorkEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="64dp"
-        android:text="освещение и др" />
+        android:text="загрузка освещение и др" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_lighting"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="24dp"
+        android:text="добавить освещение и др" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_switchgear"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:text="добавить сборки" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_el_motor"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:text="добавить эл.двигатели" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_vl"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:text="добавить ВЛ" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_tr"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:text="добавить ТР" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_tsn"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:text="добавить ТСН" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/b_add_tg"
+        style="@style/ButtonStyleRequestWorkEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="36dp"
+        android:text="добавить ТГ" />
 
 </LinearLayout>
