--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,5 +32,6 @@
     <color name="color_request_work_calendar">#66BB6A</color>
     <color name="home_page_gradient">#107761</color>
     <color name="text_content_rza">#A0C0A1</color>
+    <color name="text_content_rza_2">#B1C7B2</color>
 
 </resources>
