--- a/app/src/main/res/layout/dialog_equipment_tsn.xml
+++ b/app/src/main/res/layout/dialog_equipment_tsn.xml
@@ -11,17 +11,40 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_name"
-            style="@style/TextViewStyleContent"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="АТ-4"
-            android:textSize="32sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_name"
+                style="@style/TextViewStyleContent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="АТ-4"
+                android:textSize="32sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_voltage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/TextViewStyleContentHomePageSubsection"
+                android:text="10.5/3.15"
+                android:fontFamily="@font/actor"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:layout_marginHorizontal="8dp"
+                android:textColor="@color/text_content_rza"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="0dp"
@@ -81,25 +104,10 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_voltage"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/TextViewStyleContentHomePageSubsection"
-                        android:text="10.5/3.15"
-                        android:fontFamily="@font/actor"
-                        android:layout_gravity="center"
-                        android:textColor="@color/text_content_rza"
-                        android:paddingStart="16dp"
-                        android:textSize="16sp"
-
-                        android:gravity="start"/>
-
                     <View
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"/>
-
+                        android:layout_weight="1" />
 
                     <TextView
                         android:id="@+id/tv_power_supply"
@@ -118,7 +126,6 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
-
 
 
             </LinearLayout>
@@ -250,7 +257,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-                    app:spanCount="3"/>
+                    app:spanCount="2" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
